fix: weird text overflow

--- a/styles/global.css
+++ b/styles/global.css
@@ -13,6 +13,10 @@
     U+FEFF, U+FFFD;
 }
 
+.prose * {
+  @apply overflow-ellipsis overflow-hidden;
+}
+
 .prose code {
   @apply text-gray-800 px-1 py-0.5 border border-gray-100 rounded-md bg-gray-100;
 }
